<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CaptionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/title_new_post"
            app:titleTextColor="@color/black"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_media"
            android:scaleType="centerCrop"
            android:layout_width="85dp"
            android:layout_height="85dp" />

        <EditText
            android:id="@+id/editText_caption"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:maxLength="1024"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/add_caption"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/editText_date"
            android:inputType="date"
            android:focusable="false"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="0.03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/ce"/>

        <Switch
            android:id="@+id/switch_era"
            android:checked="true"
            android:layout_weight="0.05"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/button_article"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/create_article"/>

</LinearLayout>